[package]
name = "rusty_socks"
version = "2.1.0"
authors = ["Aaron Roney <twitchax>"]
edition = "2024"

[dependencies]
rand = "0.10"
futures = "0.3"
pnet = "0.35"
toml = "1"
simple_logger = "5"
log = { version = "0.4", features = ["release_max_level_info"] }
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
